fix overflow text area in create group

--- a/wwwroot/css/group.css
+++ b/wwwroot/css/group.css
@@ -425,7 +425,7 @@ transition: 0.3s;
 }
 textarea {
   min-height: 50vh;
-  min-width: 50vw;
+  width: 100%;
   border: none;
   outline: none;
   margin-top: 20px;
@@ -1001,6 +1001,7 @@ display: block;
       right: 15%;
   }
 }
+
 @media (max-width: 1200px) {
   .create-post-button {
     bottom: 3%;
@@ -1039,6 +1040,9 @@ display: block;
   }
   .addPostIcon {
     bottom: 8%;
+  }
+  .box {
+    padding: 40px 20px;
   }
 }
 @media (max-width:920px){
